# skin_cancer_classification

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  run_system.sh  setup.sh  stop_system.sh  streamlit_app.py
config/: settings.py
dataset_test/: README.md
models/: schemas.py
notebook/: mobilenet-skin-cancer.ipynb  resnet50-skin-cancer-classification.ipynb  self-build-skin-cancer.ipynb
services/: __init__.py  prediction_service.py
utils/: image_utils.py  model_utils.py
weights/mobilenet/: model_architecture.json
